--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,6 +1,3 @@
-<!--==============================
-    Sidemenu
-============================== -->
 <div class="popup-search-box d-none d-lg-block">
 	<button class="searchClose">
 		<i class="fal fa-times"></i>
@@ -12,40 +9,38 @@
 		</button>
 	</form>
 </div>
-<!--==============================
-Mobile Menu
-============================== -->
+
 <div class="as-menu-wrapper">
 	<div class="as-menu-area text-center">
 		<button class="as-menu-toggle">
 			<i class="fal fa-times"></i>
 		</button>
 		<div class="mobile-logo">
-			<a href="index.html"><img src="{{ asset('assets/img/logo_orange 2.png') }}" alt="amd37"></a>
-			<a href="index.html"><img src="{{ asset('assets/img/AMD 37.png') }}" alt="amd37"></a>
+			<a href="{{ path('app_home') }}"><img src="{{ asset('assets/img/logo_orange 2.png') }}" alt="amd37"></a>
+			<a href="{{ path('app_home') }}"><img src="{{ asset('assets/img/AMD 37.png') }}" alt="amd37"></a>
 		</div>
 		<div class="as-mobile-menu">
 			<ul>
 				<li class="menu-item-has-children">
-					<a href="/">ACCEUIL</a>
+					<a href="{{ path('app_home') }}">ACCUEIL</a>
 				</li>
 				<li>
-					<a href="/a-propos">A PROPOS</a>
+					<a href="{{ path('app_about') }}">A PROPOS</a>
 				</li>
 
 				<li class="menu-item-has-children">
 					<a href="#">PAGES</a>
 					<ul class="sub-menu">
 						<li>
-							<a href="/project">Projet</a>
+							<a href="{{ path('app_project_index') }}">Projet</a>
 						</li>
 						<li>
-							<a href="/avis">Avis</a>
+							<a href="{{ path('app_testimonial_index') }}">Avis</a>
 						</li>
 					</ul>
 				</li>
 				<li>
-					<a href="/contact">CONTACT</a>
+					<a href="{{ path('app_contact_index') }}">CONTACT</a>
 				</li>
 			</ul>
 		</div>
@@ -60,9 +55,8 @@ Mobile Menu
 		<div class="widget footer-widget">
 			<div class="as-widget-about">
 				<div class="footer-logo">
-					<a href="/"><img src="{{ asset('assets/img/logo-white2_2.svg') }}" alt="AMD37"></a>
+					<a href="{{ path('app_home') }}"><img src="{{ asset('assets/img/logo-white2_2.svg') }}" alt="AMD37"></a>
 				</div>
-				<p class="about-text">Fusce varius, dolor tempor interdum tristiquei bibendum.</p>
 				<ul class="footer-info-list">
 					<li class="footer-info">
 						<i class="fa-solid fa-phone"></i>
@@ -85,15 +79,10 @@ Mobile Menu
 					<i class="fa-solid fa-paper-plane"></i>
 				</button>
 			</form>
-
 		</div>
 	</div>
 </div>
 
-
-<!--==============================
-Header Area
-==============================-->
 <header class="as-header header-layout2">
 	<div class="navbar-top">
 		<div class="container-fluid">
@@ -119,17 +108,15 @@ Header Area
 			</div>
 		</div>
 	</div>
-	<div
-		class="sticky-wrapper">
-		<!-- Main Menu Area -->
+	<div class="sticky-wrapper">
 		<div class="menu-area">
 			<div class="logo-bg-shape"></div>
 			<div class="container-fluid">
 				<div class="row align-items-center justify-content-between">
 					<div class="col-auto">
 						<div class="header-logo">
-							<a href="/"><img src="{{ asset('assets/img/logo_orange 2.png') }}" alt=""></a>
-							<a href="/"><img src="{{ asset('assets/img/AMD 37.png') }}" alt=""></a>
+							<a href="{{ path('app_home') }}"><img src="{{ asset('assets/img/logo_orange 2.png') }}" alt="amd37"></a>
+							<a href="{{ path('app_home') }}"><img src="{{ asset('assets/img/AMD 37.png') }}" alt="amd37"></a>
 						</div>
 					</div>
 					<div class="col-auto">
@@ -137,19 +124,19 @@ Header Area
 							<nav class="main-menu d-none d-lg-inline-block">
 								<ul>
 									<li>
-										<a href="/">ACCUEIL</a>
+										<a href="{{ path('app_home') }}">ACCUEIL</a>
 									</li>
 									<li>
-										<a href="/a-propos">A PROPOS</a>
+										<a href="{{ path('app_about') }}">A PROPOS</a>
 									</li>
 									<li class="menu-item-has-children">
 										<a href="#">PAGES</a>
 										<ul class="sub-menu">
 											<li>
-												<a href="/project">Projet</a>
+												<a href="{{ path('app_project_index') }}">Projet</a>
 											</li>
 											<li>
-												<a href="/avis">Avis</a>
+												<a href="{{ path('app_testimonial_index') }}">Avis</a>
 											</li>
 										</ul>
 									</li>
@@ -165,7 +152,7 @@ Header Area
 							<button type="button" class="icon-btn bg-none searchBoxToggler">
 								<i class="fa-regular fa-magnifying-glass"></i>
 							</button>
-							<a href="/contact" class="as-btn style4 d-none d-xl-block">Contactez-nous</a>
+							<a href="{{ path('app_contact_index') }}" class="as-btn style4 d-none d-xl-block">Contactez-nous</a>
 						</div>
 					</div>
 				</div>
