--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -1,15 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Project index
+{% block title %}Project
 {% endblock %}
 
 {% block body %}
-	<!--==============================
-		    Breadcumb
-		============================== -->
-	<div
-		class="breadcumb-wrapper" data-bg-src="assets/img/hero/vehicule.png" data-overlay="title" data-opacity="7">
-		<!-- bg animated image/ -->
+	<div class="breadcumb-wrapper" data-bg-src="assets/img/hero/vehicule.png" data-overlay="title" data-opacity="7">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8">
@@ -17,7 +12,7 @@
 						<h1 class="breadcumb-title">Projet</h1>
 						<ul class="breadcumb-menu">
 							<li>
-								<a href="/">ACCUEIL</a>
+								<a href="{{ path('app_home') }}">ACCUEIL</a>
 							</li>
 							<li class="active">PROJET</li>
 						</ul>
@@ -27,9 +22,6 @@
 		</div>
 	</div>
 
-	<!--==============================
-		    Service Area 02 
-		==============================-->
 	<div class="service-area-2 space">
 		<div class="container">
 			<div class="row gy-25">
@@ -54,8 +46,8 @@
 								</h3>
 								<p class="service-card_text">{{ category.description }}</p>
 								<a class="line-btn" href="{{ path('app_project_by_category', {slug: category.slug}) }}">
-                                VOIR LA RUBRIQUE
-                                </a>
+									VOIR LA RUBRIQUE
+								</a>
 							</div>
 						</div>
 					</div>
@@ -65,10 +57,6 @@
 		</div>
 	</div>
 
-
-	<!--==============================
-		    Brand Area  
-		==============================-->
 	<div class="client-sec1 space-bottom">
 		<div class="container">
 			<div class="row">
@@ -77,34 +65,34 @@
 						<h2 class="client-title h4 mb-0">
 							<span class="double-line"></span>
 							NOS MARQUES & PARTENAIRES
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="client-box-border">
-				<div class="row as-carousel" id="brandSlide1" data-slide-show="5" data-lg-slide-show="4" data-md-slide-show="3" data-sm-slide-show="2" data-xs-slide-show="1" data-arrows="false">
-					<div class="col-auto client-box">
-						<img src="assets/img/client/bv2ii.png" alt="Client Logo">
-					</div>
-					<div class="col-auto client-box">
-						<img src="assets/img/client/Deutz.png" alt="Client Logo">
-					</div>
-					<div class="col-auto client-box">
-						<img src="assets/img/client/ebpl.png" alt="Client Logo">
-					</div>
-					<div class="col-auto client-box">
-						<img src="assets/img/client/Peugeot.png" alt="Client Logo">
-					</div>
-					<div class="col-auto client-box">
-						<img src="assets/img/client/renault.png" alt="Client Logo">
-					</div>
-					<div class="col-auto client-box">
-						<img src="assets/img/client/Sarl.png" alt="Client Logo">
-					</div>
-					<div class="col-auto client-box">
-						<img src="assets/img/client/Yanmar.png" alt="Client Logo">
+				<div class="client-box-border">
+					<div class="row as-carousel" id="brandSlide1" data-slide-show="5" data-lg-slide-show="4" data-md-slide-show="3" data-sm-slide-show="2" data-xs-slide-show="1" data-arrows="false">
+						<div class="col-auto client-box">
+							<img src="assets/img/client/bv2ii.png" alt="Client Logo">
+						</div>
+						<div class="col-auto client-box">
+							<img src="assets/img/client/Deutz.png" alt="Client Logo">
+						</div>
+						<div class="col-auto client-box">
+							<img src="assets/img/client/ebpl.png" alt="Client Logo">
+						</div>
+						<div class="col-auto client-box">
+							<img src="assets/img/client/Peugeot.png" alt="Client Logo">
+						</div>
+						<div class="col-auto client-box">
+							<img src="assets/img/client/renault.png" alt="Client Logo">
+						</div>
+						<div class="col-auto client-box">
+							<img src="assets/img/client/Sarl.png" alt="Client Logo">
+						</div>
+						<div class="col-auto client-box">
+							<img src="assets/img/client/Yanmar.png" alt="Client Logo">
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-{% endblock %}
+	{% endblock %}
